@@ -1,0 +1,10 @@
+Title: PDF export of filtered alert statistics view was always empty
+Level: 1
+Component: reporting
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i3p1
+Date: 1484125389
+
+
