@@ -40,6 +40,7 @@
 
     Reporting & Availability:
     * 3652 FIX: Unbreak PDF exports...
+    * 4267 FIX: PDF export of filtered alert statistics view was always empty
 
     Event Console:
     * 4153 FIX: Fix forwarding notifications to Check_MK when no contact groups are set
